--- a/rdf-forge/rdf-forge-ui/src/app/features/shacl/shacl-studio/shacl-studio.html
+++ b/rdf-forge/rdf-forge-ui/src/app/features/shacl/shacl-studio/shacl-studio.html
@@ -1,57 +1,90 @@
-<p-toast></p-toast>
-
 <div class="shacl-studio">
   <div class="header">
     <h1>SHACL Studio</h1>
     <div class="actions">
-      <span class="p-input-icon-left">
-        <i class="pi pi-search"></i>
-        <input type="text" pInputText placeholder="Search shapes..." [ngModel]="searchQuery()" (ngModelChange)="searchQuery.set($event)" />
-      </span>
-      <p-button label="New Shape" icon="pi pi-plus" (click)="createShape()"></p-button>
+      <mat-form-field appearance="outline" class="search-field">
+        <mat-icon matPrefix>search</mat-icon>
+        <input matInput placeholder="Search shapes..." [ngModel]="searchQuery()" (ngModelChange)="searchQuery.set($event)" />
+      </mat-form-field>
+      <button mat-raised-button color="primary" (click)="createShape()">
+        <mat-icon>add</mat-icon>
+        New Shape
+      </button>
     </div>
   </div>
 
-  <p-table [value]="shapes()" [loading]="loading()" [paginator]="true" [rows]="10" dataKey="id" responsiveLayout="scroll" styleClass="p-datatable-sm">
-    <ng-template pTemplate="emptymessage">
-      <tr>
-        <td colspan="5">
-          <div class="empty-state">
-            <i class="pi pi-check-square"></i>
-            <p>No SHACL shapes defined</p>
-            <p-button label="Create your first shape" icon="pi pi-plus" (click)="createShape()"></p-button>
-          </div>
-        </td>
-      </tr>
-    </ng-template>
+  <div class="table-container">
+    @if (loading()) {
+      <div class="loading-spinner">
+        <mat-spinner></mat-spinner>
+      </div>
+    } @else if (filteredShapes().length === 0) {
+      <div class="empty-state">
+        <mat-icon class="empty-icon">check_box</mat-icon>
+        <p>No SHACL shapes defined</p>
+        <button mat-raised-button color="primary" (click)="createShape()">
+          <mat-icon>add</mat-icon>
+          Create your first shape
+        </button>
+      </div>
+    } @else {
+      <table mat-table [dataSource]="paginatedShapes()" class="shapes-table">
+        <ng-container matColumnDef="name">
+          <th mat-header-cell *matHeaderCellDef class="name-column">Name</th>
+          <td mat-cell *matCellDef="let shape" class="cursor-pointer" (click)="editShape(shape)">
+            <div class="shape-name">
+              <span class="name">{{ shape.name }}</span>
+              <span class="uri">{{ shape.uri }}</span>
+            </div>
+          </td>
+        </ng-container>
 
-    <ng-template pTemplate="header">
-      <tr>
-        <th style="min-width: 200px">Name</th>
-        <th style="width: 150px">Target Class</th>
-        <th style="width: 120px">Format</th>
-        <th style="width: 120px">Updated</th>
-        <th style="width: 100px">Actions</th>
-      </tr>
-    </ng-template>
+        <ng-container matColumnDef="targetClass">
+          <th mat-header-cell *matHeaderCellDef class="target-class-column">Target Class</th>
+          <td mat-cell *matCellDef="let shape" class="cursor-pointer" (click)="editShape(shape)">
+            {{ shape.targetClass || '-' }}
+          </td>
+        </ng-container>
 
-    <ng-template pTemplate="body" let-shape>
-      <tr (click)="editShape(shape)" class="cursor-pointer">
-        <td>
-          <div class="shape-name">
-            <span class="name">{{ shape.name }}</span>
-            <span class="uri">{{ shape.uri }}</span>
-          </div>
-        </td>
-        <td>{{ shape.targetClass || '-' }}</td>
-        <td><p-tag [value]="shape.contentFormat" [severity]="shape.contentFormat === 'turtle' ? 'success' : 'info'"></p-tag></td>
-        <td>{{ formatDate(shape.updatedAt) }}</td>
-        <td>
-          <div class="row-actions">
-            <p-button icon="pi pi-trash" severity="danger" [text]="true" [rounded]="true" (click)="deleteShape(shape, $event)"></p-button>
-          </div>
-        </td>
-      </tr>
-    </ng-template>
-  </p-table>
+        <ng-container matColumnDef="format">
+          <th mat-header-cell *matHeaderCellDef class="format-column">Format</th>
+          <td mat-cell *matCellDef="let shape" class="cursor-pointer" (click)="editShape(shape)">
+            <mat-chip [class.turtle-chip]="shape.contentFormat === 'turtle'" [class.info-chip]="shape.contentFormat !== 'turtle'">
+              {{ shape.contentFormat }}
+            </mat-chip>
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="updated">
+          <th mat-header-cell *matHeaderCellDef class="updated-column">Updated</th>
+          <td mat-cell *matCellDef="let shape" class="cursor-pointer" (click)="editShape(shape)">
+            {{ formatDate(shape.updatedAt) }}
+          </td>
+        </ng-container>
+
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef class="actions-column">Actions</th>
+          <td mat-cell *matCellDef="let shape">
+            <div class="row-actions">
+              <button mat-icon-button color="warn" (click)="deleteShape(shape, $event)">
+                <mat-icon>delete</mat-icon>
+              </button>
+            </div>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
+
+      <mat-paginator
+        [length]="filteredShapes().length"
+        [pageSize]="pageSize()"
+        [pageIndex]="pageIndex()"
+        [pageSizeOptions]="[5, 10, 25, 50]"
+        (page)="onPageChange($event)"
+        showFirstLastButtons>
+      </mat-paginator>
+    }
+  </div>
 </div>
